--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <title></title>
   </head>
   <body>
-    <div><span>Ver as tarefas da<span><select class="meuSeletor"></select></div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="data.js"></script>
+    <div><span>Ver as tarefas da<span><select class="mySelector"></select></div>
+      <ul class = "posts-list"></ul>
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
+      <script src="data.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
