refatoracao index.html: title e indentacao

--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Refactoring</title>
     <link rel="stylesheet" href="index.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-                 <div class= "title"><span>Ver as tarefas da<span><select class="mySelector"></select></div>
-      <ul class = "tasksList"></ul>
-      <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
-      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-      <script src="data.js"></script>
+    <div class= "title">
+      <h3>Ver as tarefas da</h3><select class="mySelector"></select>
+    </div>
+    <ul class = "tasksList"></ul>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="data.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
